--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "contributes": {
     "commands": [
       {
-        "command": "react-todo.helloWorld",
-        "title": "Hello World"
+        "command": "react-todo.ToDo",
+        "title": "ToDo List",
+        "category": "ToDo"
       }
     ]
   },
   "scripts": {
+    "install:all": "npm install && cd webview-ui && npm install",
+    "dev:webview": "cd webview-ui && npm run dev",
+    "build:webview": "cd webview-ui && npm run build",
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
