Revert "✨ feat: Adding TodoList in editor context menu"
This reverts commit ff196adc6b2e1a7426a8a76697233f4494ed3d6c. It is not necessary register the TodoList command.

--- a/package.json
+++ b/package.json
@@ -11,19 +11,7 @@
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
-  "enabledApiProposals": [
-    "contribEditorContentMenu"
-  ],
   "contributes": {
-    "menus": {
-      "editor/context": [
-        {
-          "command": "react-todo.ToDo",
-          "group": "Todo@1",
-          "when": "editorTextFocus"
-        }
-      ]
-    },
     "viewsContainers": {
       "activitybar": [
         { 
@@ -53,7 +41,7 @@
   },
   "scripts": {
     "install:all": "npm install && cd webview-ui && npm install",
-    "dev:webview": "cd webview-ui && npm rf dev",
+    "dev:webview": "cd webview-ui && npm run dev",
     "build:webview": "cd webview-ui && npm run build",
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
