✨ feat: Go to the todo's location implementing feature that allows the user to open the text editor in the file and line to which the "Todo" is associated. Click on the location button of a specific TodoLIstElement will active the method "goToTodoLocation" that sends a message to SideBarProvider in the extension source and open the text editor on the Todo's location.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "menus": {
       "editor/context": [
         {
-          "group": "Todo@1",
+          "group": "navigation@3",
           "command": "react-todo.addTodoSelection",
           "when": "editorIsOpen && editorHasSelection"
         }
